tests/negative/neg_pr117_uppercase_attribute.safe
-- Test: neg_pr117_uppercase_attribute
-- Description: Attribute selectors must use the lowercase Safe surface.
-- Expected: REJECT source_frontend_error
-- migrate: skip

package neg_pr117_uppercase_attribute

   subtype index is integer (1 to 3);

   function run returns integer

      return index.First
